--- a/index.html
+++ b/index.html
@@ -257,6 +257,6 @@
       <img src="logo.png" alt="Company Logo" />
     </div>
   </div>
-  <script src="script.js"></script>
+  <script src="script.js?v=21"></script>
 </body>
 </html>
