--- a/index.html
+++ b/index.html
@@ -32,8 +32,30 @@
           </div>
           <label>Expected Joining Date *</label>
           <input type="date" name="joiningDate" required />
-          <label>Full Full Name (as per passport/ IC) *</label>
+          <label>Full Name (as per passport/ IC) *</label>
           <input type="text" name="fullName" required />
+	<label>Date of Birth (DD/MM/YY) *</label>
+        <input type="date" name="dob" required />
+        <label>State of Birth</label>
+        <input type="text" name="stateOfBirth" />
+        <label>Marital Status</label>
+        <select name="maritalStatus" onchange="toggleOtherField(this, 'maritalOtherDiv')">
+          <option value="">-- Select --</option>
+          <option>Single</option>
+          <option>Married</option>
+          <option>Other</option>
+        </select>
+        <div id="maritalOtherDiv" style="display:none">
+          <label>If Other, specify:</label>
+          <input type="text" name="maritalOther" />
+        </div>
+        <label>Gender *</label>
+        <select name="gender" required>
+          <option value="">-- Select --</option>
+          <option>Male</option>
+          <option>Female</option>
+          <option>Other</option>
+        </select>
           <label>Currently in Malaysia *</label>
           <select name="currentlyInMalaysia" id="currentlyInMalaysia" onchange="toggleMalaysiaFields()" required>
             <option value="">-- Select --</option>
@@ -61,7 +83,7 @@
          <input type="number" name="yearsOfStayHome" required />
           <label>Complete Address in Malaysia </label>
           <textarea name="completeAddressMalaysia" id="completeAddressMalaysia" rows="3"></textarea>
-          <label>No. of Years of Stay (Malaysia) *</label>
+          <label>No. of Years of Stay (Malaysia)</label>
           <input type="number" name="yearsOfStayMalaysia" id="yearsOfStayMalaysia" />
           <label>Duration of Stay From</label>
          <input type="date" name="durationStayFrom" />
@@ -137,7 +159,7 @@
           </div>
           <label>Bank Account Number *</label>
           <input type="text" name="bankAccount" required />
-          <label>Bank Account Type *</label>
+          <label>Bank Account Type</label>
           <input type="text" name="accountType" />
           <label>Income Tax Number</label>
           <input type="text" name="taxNumber" />
@@ -154,127 +176,238 @@
             <button type="button" onclick="nextSection()">Next</button>
           </div>
         </div>
-        <!-- SECTION 4: Employment History -->
-        <div class="form-section">
-          <h2>Employment History</h2>
-          <div id="employmentSection">
-            <div class="employment-block">
-              <label>Company Name *</label>
-              <input type="text" name="company[]" required />
-              <label>From *</label>
-              <input type="date" name="from[]" required />
-              <label>To *</label>
-              <input type="date" name="to[]" required />
-              <label>Position *</label>
-              <input type="text" name="position[]" required />
-              <label>Reason for Leaving</label>
-              <input type="text" name="reason[]" />
-            </div>
-          </div>
-          <button type="button" onclick="addEmployment()">+ Add More</button>
-          <div class="button-row">
-            <button type="button" onclick="prevSection()">Previous</button>
-            <button type="button" onclick="nextSection()">Next</button>
+      <!-- SECTION 4: Employment History -->
+      <div class="form-section">
+        <h2>Employment History</h2>
+        <div id="employmentSection">
+          <div class="employment-block">
+            <label>Company Name *</label>
+            <input type="text" name="company[]" required />
+
+            <label>From *</label>
+            <input type="date" name="from[]" required />
+
+            <label>To *</label>
+            <input type="date" name="to[]" required />
+
+            <label>Employee ID</label>
+            <input type="text" name="employeeId[]" />
+
+            <label>Contact Number</label>
+            <input type="text" name="contactNumber[]" />
+
+            <label>Position *</label>
+            <input type="text" name="jobTitle[]" required />
+
+            <label>Office Address</label>
+            <textarea name="officeAddress[]" rows="2"></textarea>
+
+            <label>Reference Name</label>
+            <input type="text" name="refName[]" />
+
+            <label>Reference Contact No</label>
+            <input type="text" name="refPhone[]" />
+
+            <label>Reference Position</label>
+            <input type="text" name="refPosition[]" />
+
+            <label>Reference Email ID</label>
+            <input type="email" name="refEmail[]" />
+
+            <label>Reason For Leaving</label>
+            <textarea name="reasonForLeaving[]" rows="2"></textarea>
+
+            <label>Last Drawn Monthly Salary</label>
+            <input type="text" name="lastSalary[]" />
           </div>
         </div>
+        <button type="button" onclick="addEmployment()">+ Add More</button>
+        <div class="button-row">
+          <button type="button" onclick="prevSection()">Previous</button>
+          <button type="button" onclick="nextSection()">Next</button>
+        </div>
+      </div>
 
         <!-- SECTION 5: Education -->
-        <div class="form-section">
-          <h2>Education</h2>
-          <div id="eduSection">
-            <div class="edu-block">
-              <label>Institution *</label>
-              <input type="text" name="institution[]" required />
-              <label>Degree *</label>
-              <input type="text" name="degree[]" required />
-              <label>Year Graduated *</label>
-              <input type="number" name="year[]" required />
-            </div>
-          </div>
-          <button type="button" onclick="addEducation()">+ Add More</button>
-          <div class="button-row">
-            <button type="button" onclick="prevSection()">Previous</button>
-            <button type="button" onclick="nextSection()">Next</button>
+      <div class="form-section">
+        <h2>Education</h2>
+        <div id="eduSection">
+          <div class="edu-block">
+            <label>Name Of School / Univ. *</label>
+            <input type="text" name="eduSchool[]" required />
+
+            <label>Institute Name *</label>
+            <input type="text" name="eduInstitute[]" required />
+
+            <label>Year Graduated *</label>
+            <input type="number" name="eduYear[]" required />
+
+            <label>Graduated (Yes / No) *</label>
+            <select name="eduGraduated[]" required>
+              <option value="">-- Select --</option>
+              <option>Yes</option>
+              <option>No</option>
+            </select>
+
+            <label>Degree *</label>
+            <input type="text" name="eduDegree[]" required />
+
+            <label>GPA Score / %</label>
+            <input type="text" name="eduGPA[]" />
+
+            <label>Stream *</label>
+            <input type="text" name="eduStream[]" required />
           </div>
         </div>
+        <button type="button" onclick="addEducation()">+ Add More</button>
+        <div class="button-row">
+          <button type="button" onclick="prevSection()">Previous</button>
+          <button type="button" onclick="nextSection()">Next</button>
+        </div>
+      </div>
 
         <!-- SECTION 6: Family Members -->
         <div class="form-section">
-          <h2>Family Members</h2>
-          <div id="familySection">
-            <div class="family-block">
-              <label>Name *</label>
-              <input type="text" name="familyName[]" required />
-              <label>Relationship *</label>
-              <select name="familyRelation[]" required>
-                <option value="">-- Select --</option>
-                <option>Spouse</option>
-                <option>Child</option>
-                <option>Parent</option>
-              </select>
-              <label>Passport Number</label>
-              <input type="text" name="familyPassport[]" required />
-              <label>Date Of Birth</label>
-              <input type="text" name="familyDob[]" required />
-              <label>Occupation</label>
-              <input type="text" name="familyOccupation[]" />
-            </div>
-          </div>
-          <button type="button" onclick="addFamily()">+ Add More</button>
-          <div class="button-row">
-            <button type="button" onclick="prevSection()">Previous</button>
-            <button type="button" onclick="nextSection()">Next</button>
-          </div>
-        </div>
+        <h2>Family Members</h2>
+        <div id="familySection">
+          <div class="family-block">
+            <label>Complete Name *</label>
+            <input type="text" name="familyName[]" required />
 
-        <!-- SECTION 7: Certifications -->
-        <div class="form-section">
-          <h2>Certifications</h2>
-          <div id="certSection">
-            <div class="cert-block">
-              <label>Title</label>
-              <input type="text" name="certTitle[]" />
-              <label>Institution</label>
-              <input type="text" name="certInstitution[]" />
-              <label>Date</label>
-              <input type="date" name="certDate[]" />
-            </div>
-          </div>
-          <button type="button" onclick="addCertification()">+ Add More</button>
-          <div class="button-row">
-            <button type="button" onclick="prevSection()">Previous</button>
-            <button type="button" onclick="nextSection()">Next</button>
-          </div>
-        </div>
+            <label>Relationship *</label>
+            <select name="familyRelation[]" required>
+              <option value="">-- Select --</option>
+              <option>Spouse</option>
+              <option>Child</option>
+              <option>Parent</option>
+              <option>Other</option>
+            </select>
 
-        <!-- SECTION 8: Office Use Only -->
-        <div class="form-section">
-          <h2>Office Use Only</h2>
-          <label>Joining Date *</label>
-          <input type="date" name="actualJoiningDate" required />
-          <label>Department *</label>
-          <input type="text" name="department" required />
-          <label>Position *</label>
-          <input type="text" name="officePosition" required />
-          <div class="button-row">
-            <button type="button" onclick="prevSection()">Previous</button>
-            <button type="button" onclick="nextSection()">Next</button>
-          </div>
-        </div>
+            <label>Passport Number *</label>
+            <input type="text" name="familyPassport[]" required />
 
-        <!-- SECTION 9: Declaration -->
-        <div class="form-section">
-          <h2>Declaration</h2>
-          <p>I hereby declare that the information provided is true to the best of my knowledge.</p>
-          <label>Signature *</label>
-          <input type="text" name="signature" required />
-          <label>Date *</label>
-          <input type="date" name="signDate" required />
-          <div class="button-row">
-            <button type="button" onclick="prevSection()">Previous</button>
-            <button type="button" onclick="nextSection()">Next</button>
+            <label>Date Of Birth *</label>
+            <input type="date" name="familyDOB[]" required />
+
+            <label>Occupation *</label>
+            <input type="text" name="familyOccupation[]" required />
           </div>
         </div>
+        <button type="button" onclick="addFamily()">+ Add More</button>
+        <div class="button-row">
+          <button type="button" onclick="prevSection()">Previous</button>
+          <button type="button" onclick="nextSection()">Next</button>
+        </div>
+      </div>
+
+	<!-- SECTION 7: Emergency Contact -->
+      <div class="form-section">
+        <h2>Emergency Contact</h2>
+        <label>Full Name *</label>
+        <input type="text" name="emergencyName" required />
+
+        <label>Relationship *</label>
+        <input type="text" name="emergencyRelation" required />
+
+        <label>Phone *</label>
+        <input type="tel" name="emergencyPhone" required />
+
+        <label>Address *</label>
+        <textarea name="emergencyAddress" rows="3" required></textarea>
+
+        <label>Location *</label>
+        <select name="emergencyLocation" required>
+          <option value="">-- Select --</option>
+          <option>Malaysia</option>
+          <option>Home Country</option>
+        </select>
+        <div class="button-row">
+          <button type="button" onclick="prevSection()">Previous</button>
+          <button type="button" onclick="nextSection()">Next</button>
+        </div>
+      </div>
+
+     <!-- SECTION 8: Certifications -->
+      <div class="form-section">
+        <h2>Certifications</h2>
+        <div id="certSection">
+          <div class="cert-block">
+            <label>Institution *</label>
+            <input type="text" name="certInstitution[]"  />
+
+            <label>Completion Date *</label>
+            <input type="date" name="certCompletionDate[]"  />
+
+            <label>Course Title *</label>
+            <input type="text" name="certCourseTitle[]"  />
+
+            <label>Certification No. *</label>
+            <input type="text" name="certNumber[]"  />
+          </div>
+        </div>
+        <button type="button" onclick="addCertification()">+ Add More</button>
+        <div class="button-row">
+          <button type="button" onclick="prevSection()">Previous</button>
+          <button type="button" onclick="nextSection()">Next</button>
+        </div>
+      </div>
+
+        <!-- SECTION 9: Office Use Only -->
+      <div class="form-section">
+        <h2>Office Use Only</h2>
+
+        <label>Cost Center Code</label>
+        <input type="text" name="costCenterCode" />
+
+        <label>Cost Center Name</label>
+        <input type="text" name="costCenterName" />
+
+        <label>Actual Joining Date *</label>
+        <input type="date" name="actualJoiningDate" required />
+
+        <label>Category *</label>
+        <select name="category" required>
+          <option value="">-- Select --</option>
+          <option>Permanent</option>
+          <option>Contract</option>
+          <option>Intern</option>
+          <option>Other</option>
+        </select>
+
+        <label>Department *</label>
+        <select name="department" required>
+          <option value="">-- Select --</option>
+          <option>IT</option>
+          <option>HR</option>
+          <option>Finance</option>
+          <option>Marketing</option>
+          <option>Operations</option>
+          <option>Other</option>
+        </select>
+
+        <label>Project</label>
+        <input type="text" name="project" />
+
+        <label>Position Applied for *</label>
+        <select name="positionApplied" required>
+          <option value="">-- Select --</option>
+          <option>Software Engineer</option>
+          <option>Project Manager</option>
+          <option>HR Executive</option>
+          <option>Business Analyst</option>
+          <option>IT Support</option>
+          <option>Other</option>
+        </select>
+
+        <label>Date</label>
+        <input type="date" name="officeUseDate" />
+
+        <div class="button-row">
+          <button type="button" onclick="prevSection()">Previous</button>
+          <button type="button" onclick="nextSection()">Next</button>
+        </div>
+      </div>
+
 
         <!-- SECTION 10: Final Submit -->
         <div class="form-section">
