--- a/index.html
+++ b/index.html
@@ -289,8 +289,8 @@
             <label>Date Of Birth *</label>
             <input type="date" name="familyDOB[]" required />
 
-            <label>Occupation *</label>
-            <input type="text" name="familyOccupation[]" required />
+            <label>Occupation</label>
+            <input type="text" name="familyOccupation[]" />
           </div>
         </div>
         <button type="button" onclick="addFamily()">+ Add More</button>
@@ -306,8 +306,14 @@
         <label>Full Name *</label>
         <input type="text" name="emergencyName" required />
 
-        <label>Relationship *</label>
-        <input type="text" name="emergencyRelation" required />
+	<label>Relationship *</label>
+            <select name="emergencyRelation" required>
+              <option value="">-- Select --</option>
+              <option>Spouse</option>
+              <option>Child</option>
+              <option>Parent</option>
+              <option>Other</option>
+            </select>
 
         <label>Phone *</label>
         <input type="tel" name="emergencyPhone" required />
@@ -332,16 +338,16 @@
         <h2>Certifications</h2>
         <div id="certSection">
           <div class="cert-block">
-            <label>Institution *</label>
+            <label>Institution</label>
             <input type="text" name="certInstitution[]"  />
 
-            <label>Completion Date *</label>
+            <label>Completion Date</label>
             <input type="date" name="certCompletionDate[]"  />
 
-            <label>Course Title *</label>
+            <label>Course Title</label>
             <input type="text" name="certCourseTitle[]"  />
 
-            <label>Certification No. *</label>
+            <label>Certification No</label>
             <input type="text" name="certNumber[]"  />
           </div>
         </div>
@@ -362,11 +368,11 @@
         <label>Cost Center Name</label>
         <input type="text" name="costCenterName" />
 
-        <label>Actual Joining Date *</label>
-        <input type="date" name="actualJoiningDate" required />
+        <label>Actual Joining Date</label>
+        <input type="date" name="actualJoiningDate" />
 
-        <label>Category *</label>
-        <select name="category" required>
+        <label>Category</label>
+        <select name="category">
           <option value="">-- Select --</option>
           <option>Permanent</option>
           <option>Contract</option>
@@ -374,8 +380,8 @@
           <option>Other</option>
         </select>
 
-        <label>Department *</label>
-        <select name="department" required>
+        <label>Department</label>
+        <select name="department">
           <option value="">-- Select --</option>
           <option>IT</option>
           <option>HR</option>
@@ -388,7 +394,7 @@
         <label>Project</label>
         <input type="text" name="project" />
 
-        <label>Position Applied for *</label>
+        <label>Position Applied for</label>
         <select name="positionApplied" required>
           <option value="">-- Select --</option>
           <option>Software Engineer</option>
@@ -407,7 +413,6 @@
           <button type="button" onclick="nextSection()">Next</button>
         </div>
       </div>
-
 
         <!-- SECTION 10: Final Submit -->
         <div class="form-section">
