--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <input type="date" name="joiningDate" required />
           <label>Full Name (as per passport/ IC) *</label>
           <input type="text" name="fullName" required />
-	<label>Date of Birth (DD/MM/YY) *</label>
+	<label>Date of Birth *</label>
         <input type="date" name="dob" required />
         <label>State of Birth</label>
         <input type="text" name="stateOfBirth" />
