--- a/index.html
+++ b/index.html
@@ -40,14 +40,20 @@
         <input type="number" name="age" />
         <label>State of Birth</label>
         <input type="text" name="stateOfBirth" />
-        <label>Marital Status</label>
-        <select name="maritalStatus" onchange="toggleOtherField(this, 'maritalOtherDiv')">
-          <option value="">-- Select --</option>
-          <option>Single</option>
-          <option>Married</option>
- 	 <option>Divorced</option>
-          <option>Widow/Widower</option>
-        </select>
+<label>Marital Status</label>
+<select name="maritalStatus" onchange="toggleMarriedFields(this); toggleOtherField(this, 'maritalOtherDiv')">
+  <option value="">-- Select --</option>
+  <option>Single</option>
+  <option>Married</option>
+  <option>Divorced</option>
+  <option>Widow/Widower</option>
+</select>
+<div id="marriedFields" style="display: none;">
+  <label>Date of Marriage *</label>
+  <input type="date" name="marriageDate" id="marriageDate" />
+  <label>Number of Kids *</label>
+  <input type="number" name="numberOfKids" id="numberOfKids" min="0" />
+</div>
         <label>Gender *</label>
         <select name="gender" required>
           <option value="">-- Select --</option>
